--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
-    "@angular/cdk": "^13.1.1",
+    "@angular/cdk": "^13.2.2",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
@@ -25,7 +25,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "^13.2.3",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
