--- a/package.json
+++ b/package.json
@@ -20,11 +20,24 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@progress/kendo-angular-dropdowns": "^6.0.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-treeview": "^6.0.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-inputs": "^8.0.0",
+    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-drawing": "^1.9.3",
+    "@angular/localize": "~13.0.0",
+    "@progress/kendo-theme-default": "^5.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.3",
