--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
                 "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
               },
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/material-icons-font/material-icons-font.css"
             ],
             "scripts": []
           },
