--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@progress/kendo-drawing": "^1.9.3",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^5.0.0",
+    "bootstrap": "^5.1.3",
     "fullcalendar": "^5.10.2",
     "material-icons-font": "^2.1.0",
     "primeicons": "^5.0.0",
