add material module/

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.0.0",
     "@fullcalendar/angular": "^5.10.2",
     "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dropdowns": "^6.0.1",
     "@progress/kendo-angular-inputs": "^8.0.0",
