--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/bootstrap5": "^5.10.2",
+    "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@progress/kendo-angular-common": "^2.0.0",
