--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@progress/kendo-theme-default": "^5.0.0",
     "bootstrap": "^5.1.3",
     "fullcalendar": "^5.10.2",
+    "luxon": "^2.3.1",
     "material-icons-font": "^2.1.0",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-material-timepicker-decon": "^3.3.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.4.0",
@@ -52,7 +55,7 @@
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
