--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@fullcalendar/angular": "^5.10.2",
-    "@fullcalendar/bootstrap5": "^5.10.2",
-    "@fullcalendar/core": "^5.10.1",
-    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/list": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dropdowns": "^6.0.1",
     "@progress/kendo-angular-inputs": "^8.0.0",
@@ -36,7 +37,6 @@
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^5.0.0",
     "bootstrap": "^5.1.3",
-    "fullcalendar": "^5.10.2",
     "luxon": "^2.3.1",
     "material-icons-font": "^2.1.0",
     "ngx-mat-timepicker": "^13.0.0",
